clusters/building-blocks/security/apps/tinyauth/app/tinyauth-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tinyauth
  namespace: security
spec:
  forwardAuth:
    address: http://tinyauth.security.svc.cluster.local/api/auth
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
